[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reflex_ui"
version = "0.1.0"
description = "Graph UI built with Reflex"
authors = [{ name="Your Name" }]
dependencies = [
    "reflex>=0.8.24.post1",
    "reflex-local-auth>=0.4.0",
]

[project.scripts]
graphvision = "GraphVision.runner:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["GraphVision*"]
